# span-cli

./: .gitignore  LICENSE  README.md
libspan/: Cargo.toml
libspan/src/: lib.rs  types.rs
span-tui/: Cargo.toml
span-tui/src/: main.rs
